--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <ListView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
@@ -24,12 +27,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_content_add"
+        android:layout_marginBottom="@dimen/normal_margin"
+        android:layout_marginRight="@dimen/normal_margin"
+        android:layout_marginEnd="@dimen/half_margin"
         app:fabSize="normal"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:pressedTranslationZ="4dp"
         app:elevation="4dp" />
 
 </android.support.design.widget.CoordinatorLayout>
