--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_page"
+        android:title="Add page">
+
+    </item>
+
+    <item
         android:id="@+id/menu_out"
         android:title="Logout">
     </item>
