--- a/app/src/main/res/layout/simple_text_item.xml
+++ b/app/src/main/res/layout/simple_text_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/whiteText"
         tools:text="@string/app_name"
         android:layout_marginStart="16dp" />
 </LinearLayout>
