--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
+    <color name="whiteText">#FFFFFF</color>
+
+    <color name="white">#FFFFFF</color>
 
     <color name="primaryBackground">#FFFFFF</color>
     <color name="secondaryBackground">#EEEEEE</color>
