--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="normal_margin">16dp</dimen>
     <dimen name="half_margin">8dp</dimen>
+    <dimen name="normal_text_size">18sp</dimen>
+    <dimen name="large_text_size">25sp</dimen>
 </resources>
